--- a/package.json
+++ b/package.json
@@ -5,24 +5,31 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --watch src --exec 'ts-node' src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint --fix \"**/*.{js,jsx,ts,tsx}\""
   },
   "engines": {
     "node": "16.14.0"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "@types/cors": "^2.8.12",
+    "dotenv": "^16.0.1",
+    "socket.io": "^4.5.1",
+    "mongoose": "^6.4.3"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
+    "eslint": "^8.19.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-import-resolver-typescript": "^3.2.4",
+    "eslint-plugin-import": "^2.26.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.3",
     "nodemon": "^2.0.19",
-    "socket.io": "^4.5.1",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
   }
