--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "node": "16.14.0"
   },
   "dependencies": {
+    "@sindresorhus/is": "^5.2.0",
     "@types/cors": "^2.8.12",
+    "@types/jsonwebtoken": "^8.5.8",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.3",
-    "socket.io": "^4.5.1",
-    "@types/jsonwebtoken": "^8.5.8"
+    "socket.io": "^4.5.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
