--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,12 +19,17 @@
             "tsx": "never"
         }
     ],
-    "import/prefer-default-export":"off"
-
+    "import/prefer-default-export":"off",
+    "class-methods-use-this": "off",
+    "no-shadow": "off",
+    "@typescript-eslint/no-shadow": "off"
   },
   "settings": {
     "import/resolver": {
       "typescript": {}
-    }
+    },
+    "editor.codeActionsOnSave": {
+      "source.fixAll": true
+  }
   }
 }
