--- a/.gitignore
+++ b/.gitignore
@@ -201,3 +201,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/node,macos,windows
+
+# awsconfig
+awsconfig.json
