--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
     "node": "16.14.0"
   },
   "dependencies": {
-    "express": "^4.18.1",
     "@types/cors": "^2.8.12",
+    "aws-sdk": "^2.1170.0",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
-    "socket.io": "^4.5.1",
-    "mongoose": "^6.4.3"
+    "express": "^4.18.1",
+    "mongoose": "^6.4.3",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
+    "socket.io": "^4.5.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^3.0.0",
     "@types/node": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
