--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.3",
+    "octokit": "^2.0.3",
     "socket.io": "^4.5.1"
   },
   "devDependencies": {
