--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "node": "16.14.0"
   },
   "dependencies": {
-    "@types/cors": "^2.8.12",
-    "aws-sdk": "^2.1170.0",
     "@sindresorhus/is": "^5.2.0",
+    "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^8.5.8",
+    "aws-sdk": "^2.1170.0",
     "axios": "^0.27.2",
+    "bson": "^4.6.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.3",
