--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.ts",
   "scripts": {
     "start": "nodemon --watch src --exec ts-node src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint --fix \"**/*.{js,jsx,ts,tsx}\""
+    "lint": "eslint --fix \"**/*.{js,jsx,ts,tsx}\"",
+    "test": "cross-env NODE_ENV=test jest --setupFiles dotenv/config --config jest.config.js --detectOpenHandles --forceExit"
   },
   "engines": {
     "node": "16.14.0"
@@ -28,9 +28,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.4",
     "@types/multer": "^1.4.7",
     "@types/multer-s3": "^3.0.0",
     "@types/node": "^18.0.3",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "cors": "^2.8.5",
@@ -38,8 +40,11 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-typescript": "^3.2.4",
     "eslint-plugin-import": "^2.26.0",
+    "jest": "^28.1.2",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.19",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.5",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
   }
