--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@sindresorhus/is": "^5.2.0",
     "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/morgan": "^1.9.3",
     "aws-sdk": "^2.1170.0",
     "axios": "^0.27.2",
     "bson": "^4.6.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.3",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "sharp": "^0.30.7",
