--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "redis": "^4.2.0",
     "sharp": "^0.30.7",
     "socket.io": "^4.5.1"
   },
