--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.10.0",
+    "node-schedule": "^2.1.0",
     "nodemailer": "^6.7.7",
     "redis": "^4.2.0",
     "sharp": "^0.30.7",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "toad-scheduler": "^1.6.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -39,6 +41,7 @@
     "@types/multer": "^1.4.7",
     "@types/multer-s3": "^3.0.0",
     "@types/node": "^18.0.3",
+    "@types/node-schedule": "^2.1.0",
     "@types/nodemailer": "^6.4.4",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
