--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongodb-memory-server": "^8.7.2",
+    "mongodb": "^4.8.0",
+    "mongodb-memory-server": "^7.6.3",
     "mongoose": "^6.4.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
