--- a/package.json
+++ b/package.json
@@ -58,5 +58,13 @@
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
+  },
+  "config": {
+    "mongodbMemoryServer": {
+      "arch": "x64",
+      "platform": "win32",
+      "debug": 1,
+      "preferGlobalPath": true
+    }
   }
 }
